# Amirova_qt6

./: 1.txt  2.txt  3.txt  Amirova_Actor.cpp  Amirova_Actor.h  Amirova_Group.cpp  Amirova_Group.h  Amirova_OPP_lab1.cpp  Amirova_TheaterActor.cpp  Amirova_TheaterActor.h  CMakeLists.txt  MyWidget.cpp  MyWidget.h  eng.txt  framework.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.h
